--- a/Technical Documentation Page/Technical Documentation Page.html
+++ b/Technical Documentation Page/Technical Documentation Page.html
@@ -1,5 +1,60 @@
 <style>
-    
+    #navbar {
+        position: fixed;
+        min-width: 290px;
+        top: 0px;
+        left: 0px;
+        width: 300px;
+        height: 100%;
+        border-right: solid;
+        border-color: rgba(0, 22, 22, 0.4);
+    }
+
+    header {
+        color: black;
+        margin: 10px;
+        text-align: center;
+        font-size: 1.8em;
+        font-weight: thin;
+    }
+
+    #main-doc header {
+        text-align: left;
+        margin: 0px;
+    }
+
+    navbar ul {
+        height: 88%;
+        padding: 0;
+        overflow-y: auto;
+        overflow-x: hidden;
+     }
+
+     #main-doc {
+         position: absolute;
+         margin-left: 310px;
+         padding: 20px;
+         margin-bottom: 0.96em;
+     }
+
+     @media only screen and (max-width: 815px) {
+         #navbar {
+             position: absolute;
+             top: 0;
+             padding: 0;
+             margin: 0%;
+             width: 100%;
+             max-height: 275px;
+             border: none;
+             z-index: 1;
+             border-bottom: 2px solid;
+         }
+         #main-doc {
+             position: relative;
+             margin-left: 0px;
+             margin-top: 270px;
+         }
+     }
 </style>
 <nav id="navbar">
     <header>JS Documentation</header>
